fixing some alignment issues

--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,14 @@ a {
 }
 
 header {
+  border: 0.2rem solid #ab47bc;
   background-color: darkslategrey;
+  
+}
+
+body {
+  font-size: 1rem;
+  text-align: center;
 }
 
 .one {
@@ -84,7 +91,9 @@ footer h3 {
   display: flex;
   justify-content: center;
 }
-
+.contactP{
+  margin: 2% 5% 2% 2%;
+}
 footer h2 {
   text-align: center;
 }
@@ -96,6 +105,8 @@ footer h2 {
 
 .bgColor {
   background-color: darkslategrey;
+  border: 0.2rem solid #ab47bc;
+  padding: 8px;
 }
 
 .aboutMe {
@@ -175,8 +186,15 @@ footer h2 {
     font-size: 3rem;
   }
   footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+      flex-shrink: 0;
+      bottom: 0;
+      width: 100%;
+      padding: 3%;
+      margin-top: 4%;
+
   }
+
+
 }
+
+
